loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:5: error: forward reference extends over definition of variable nbrB
      nbrB = nbrB + 1
      ^