loopdowhile.Poucet2.scala.code
while (!sortieTrouvee()) {
	do {
  	avance()
   	if (estSurBiscuit()) {
      nbrB = nbrB + 1
    }
} while (!crossing())
  var nbrB:Int = 0
  if (nbrB >= 3) {
    gauche()
  }
  else {
    droite()
  }

}
avance()
